--- a/templates/allauth/account/login.html
+++ b/templates/allauth/account/login.html
@@ -41,14 +41,17 @@
 
                 <form class="login" method="POST" action="{% url 'account_login' %}">
                   {% csrf_token %}
-                  {{ form.as_p }}
+                  {{ form|crispy }}
                   {% if redirect_field_value %}
                   <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
                   {% endif %}
-                  <a class="button secondaryAction" href="{% url 'account_reset_password' %}">{% trans "Forgot Password?" %}</a>
+                  <a class="btn btn-outline-black rounded-0" href="{% url 'home' %}">Home</a>
                   <br>
                   <br>
                   <button class="primaryAction btn btn-outline-black rounded-0 btn-lg long-btn" type="submit">{% trans 'SIGN IN' %} &raquo;</button>
+                  <p class="mt-2">
+                    <a class="button secondaryAction" href="{% url 'account_reset_password' %}">{% trans "Forgot Password?" %}</a>
+                  </p>
                 </form>
                 <br>
                 <div class="row register">
