--- a/templates/base.html
+++ b/templates/base.html
@@ -14,7 +14,7 @@
 
         {% block corecss %}
             <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-            <link rel="stylesheet" href="{% static 'css/basek.css' %}">
+            <link rel="stylesheet" href="{% static 'css/basel.css' %}">
             <link rel="preconnect" href="https://fonts.googleapis.com">
             <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
             <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@400;500&family=Hurricane&family=Lato&family=Playfair+Display&family=Roboto:wght@700&display=swap" rel="stylesheet">
@@ -79,7 +79,7 @@
                                         {% if request.user.is_superuser %}
                                             <a href="" class="dropdown-item">Product Management</a>
                                         {% endif %}
-                                        <a href="" class="dropdown-item">My Profile</a>
+                                        <a href="{% url 'profile' %}" class="dropdown-item">My Profile</a>
                                         <a href="{% url 'account_logout' %}" class="dropdown-item">Logout</a>
                                     {% else %}
                                         <a href="{% url 'account_signup' %}" class="dropdown-item">Register</a>
