--- a/bag/templates/bag/bag.html
+++ b/bag/templates/bag/bag.html
@@ -30,7 +30,11 @@
                         <div class="box-container s-box-left">
                             <div class="row">
                                 <div class="col">
-                                    <img class="bag-img" src="{{ item.product.image.url }}">  
+                                    {% if item.product.image %}
+                                        <img class="w-100" src="{{ item.product.image.url }}" alt="{{ item.product.name }}">
+                                    {% else %}
+                                        <img class="w-100" src="{{ MEDIA_URL }}noimage.png" alt="{{ item.product.name }}">
+                                    {% endif %}  
                                 </div>
                                 <div class="col">
                                     <div class="row">
