--- a/templates/base.html
+++ b/templates/base.html
@@ -63,8 +63,8 @@
                         </form>          
                     </div>
                     <div class="col-lg-3 col-md-6 search  col-sm-6 my-auto text-center">
-                        <ul class="list-inline list-unstyled text-center">
-                            <li class="list-inline-item">
+                        <div class="row text-center">
+                            <div class="col-6 ">
                                 <a class="text-black nav-link" href="#" id="user-options" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                     <div class="text-center">
                                         <div><i class="fas fa-user fa-lg"></i></div>
@@ -83,8 +83,8 @@
                                         <a href="{% url 'account_login' %}" class="dropdown-item">Login</a>
                                     {% endif %}
                                 </div>
-                            </li>
-                            <li class="list-inline-item">
+                            </div>
+                            <div class="col-6">
                                 <a class="{% if grand_total %}text-info font-weight-bold{% else %}text-black{% endif %} nav-link" href="{% url 'view_bag' %}">
                                     <div class="text-center">
                                         <div><i class="fas fa-shopping-bag fa-lg"></i></div>
@@ -97,63 +97,11 @@
                                         </p>
                                     </div>
                                 </a>
-                            </li>
-                        </ul>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
-
-            <!-- <div class="container h-100">
-                <div class="row d-lg-flex ">
-                    <div class="col-lg-3 col-sm-6 my-auto text-center nav-dropdown">
-                        <a class="border-black site-button nav-link" href="#" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                            <div class="text-center">
-                                <p class="my-0 text-black nav-btn">Mens</p>
-                                <div><i class="fa-light fa-chevrons-down"></i></div>
-                            </div>
-                        </a>
-                        <div class="dropdown-menu border-black" aria-labelledby="user-options">
-                            <a href="{% url 'products' %}?category=mens_trainers,mens_flipflops" class="dropdown-item">All Mens Shoes</a>
-                            <a href="{% url 'products' %}?category=mens_trainers" class="dropdown-item">Trainers</a>
-                            <a href="{% url 'products' %}?category=mens_flipflops" class="dropdown-item">Flipflops</a>
-                        </div>
-                    </div>
-                    <div class="col-lg-3 col-sm-6 my-auto text-center nav-dropdown">
-                        <a class="border-black site-button nav-link" href="#" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                            <div class="text-center">
-                                <p class="my-0 text-black nav-btn">Womens</p>
-                                <div><i class="fa-light fa-chevrons-down"></i></div>
-                            </div>
-                        </a>
-                        <div class="dropdown-menu border-black" aria-labelledby="user-options">
-                            <a href="{% url 'products' %}?category=womens_trainers,womens_flipflops" class="dropdown-item">All Womens Shoes</a>
-                            <a href="{% url 'products' %}?category=womens_trainers" class="dropdown-item">Trainers</a>
-                            <a href="{% url 'products' %}?category=womens_flipflops" class="dropdown-item">Flipflops</a>     
-                        </div>
-                    </div>
-                    <div class="col-lg-3 col-sm-6 my-auto text-center nav-dropdown">
-                        <a class="border-black site-button nav-link" href="#" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                            <div class="text-center">
-                                <p class="my-0 text-black nav-btn">Childrens</p>
-                                <div><i class="fa-light fa-chevrons-down"></i></div>
-                            </div>
-                        </a>
-                        <div class="dropdown-menu border-black" aria-labelledby="user-options">
-                            <a href="{% url 'products' %}?category=childrens_trainers,childrens_flipflops" class="dropdown-item">All Childrens Shoes</a>
-                            <a href="{% url 'products' %}?category=childrens_trainers" class="dropdown-item">Trainers</a>
-                            <a href="{% url 'products' %}?category=childrens_flipflops" class="dropdown-item">Flipflops</a>
-                        </div>
-                    </div>
-                    <div class="col-lg-3 col-sm-6 my-auto text-center nav-dropdown">
-                        <a class="border-black site-button nav-link" href="{% url 'products' %}?category=accessories">
-                            <div class="text-center">
-                                <p class="my-0 text-black nav-btn">Accessories</p>
-                                <div><i class="fa-light fa-chevrons-down"></i></div>
-                            </div>
-                        </a>
-                    </div>  
-                </div>
-            </div> -->
             <div class="row bg-white">
                 <nav class="navbar navbar-expand-lg navbar-light w-100">
                     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#main-nav" aria-controls="main-nav" aria-expanded="false" aria-label="Toggle navigation">
@@ -167,7 +115,7 @@
             <div class="container h-100">
                 <div class="row h-100 banner">
                     <div class="col-9 col-md-9 my-auto text-center">
-                        <p>Get 10% off all orders when you sign up for the <a href="#">news letter</a> and keep up to date with future offers!</p>
+                        <h4 class="logo-font my-1">Free delivery on orders over ${{ free_delivery_threshold }}!</h4>                
                     </div>
                     <div class="col-3 col-md-3 my-auto text-center">
                         <a href="#" class="text-black">Sign In</a> |
@@ -175,11 +123,6 @@
                     </div>
                 </div>
             </div>
-            <!-- <div id="delivery-banner" class="row text-center">
-                <div class="col">
-                    <h4 class="logo-font my-1">Free delivery on orders over ${{ free_delivery_threshold }}!</h4>                
-                </div>            
-            </div> -->
         </header>
 
         {% if messages %}
