--- a/static/css/basex.css
+++ b/static/css/basex.css
@@ -1,154 +1,3 @@
-/*
-
-.container {
-    max-width: 100%;
-}
-
-.navbar {
-    padding:0% !important;
-}
-
-body {
-
-    font-family: 'Lato';
-}
-
-#logo {
-    position:fixed;
-    top:0;
-    left:0;
-    width:25.5%;
-} 
-
- Base 
-
-.long-btn {
-    width: 80%;
-}
-
-.register a {
-    width: 50%;
-}
-
-.register p {
-    padding: 0 2% 0 12%;
-}
-
-.border-black {
-    border: 1px solid black !important;
-    border-radius: 0;
-}
-
-.nav-dropdown {
-    padding: 0 !important;
-}
-
-
-
-.box-container {
-    background: white;
-    border: 2px solid black;
-    padding: 5%;
-}
-
-.s-box-left{
-    position:relative;
-    left: 5%;
-    bottom: 80px;
-}
-
-.box-up{
-    position:relative;
-    bottom: 80px;
-}
-
-input[name='q']::placeholder {
-    color: #aab7c4;
-}
-
- Home 
-
-
-
-.newsletter {
-    padding: 14%;
-}
-
-.img-down {
-    top: 15%;
-}
-
-.margin-btm {
-    margin-bottom: 5%;
-}
-
- bag 
-
-.bag-img {
-    position:relative;
-    left: 15%;
-    border: 2px solid black;
-    width: 10rem;
-}
-
-#payment-form {
-    padding-left: 20%;
-}
-
-product details 
-
-
-.add-bag {
-    position: relative;
-    left: 40%;
-}
-
-
- -------------------------------- Media Queries 
-
- Slightly larger container on xl screens 
-@media (min-width: 1200px) {
-
-}
-
- Product Form 
-
-
-.custom-checkbox .custom-control-label::before {
-    border-radius: 0;
-    border-color: #dc3545;
-}
-
-.custom-checkbox .custom-control-input:checked~.custom-control-label::before {
-    background-color: #dc3545;
-    border-color: #dc3545;
-    border-radius: 0;
-}
-
- fixed top navbar only on medium and up 
-@media (min-width: 992px) {
-    .fixed-top-desktop-only {
-        position: fixed;
-        top: 0;
-        right: 0;
-        left: 0;
-        z-index: 1030;
-    }
-
-    .header-container {
-        padding-top: 164px;
-    }
-}
-
-
-/*
-
-.box-left{
-    position:relative;
-    left: 5%;
-    bottom: 80px;
-}
-*/
 /* Buttons */
 .btn-file {
     position: relative;
@@ -488,11 +337,11 @@ html {
     right: 36px;
 }
 
-Allauth form formatting 
+/* Allauth form formatting */ 
 
 .allauth-form-inner-content p {
-    margin-top: 1.5rem;  mt-4 
-    color: #6c757d;  text-secondary 
+    margin-top: 1.5rem; /* mt-4 */
+    color: #6c757d; /* text-secondary */
 }
 
 .allauth-form-inner-content input {
@@ -510,7 +359,7 @@ Allauth form formatting
 
 .allauth-form-inner-content button,
 .allauth-form-inner-content input[type='submit'] {
-	 btn 
+	/* btn */ 
 	display: inline-block;
     font-weight: 400;
     color: #fff;
@@ -526,8 +375,7 @@ Allauth form formatting
     font-size: 1rem;
     line-height: 1.5;
     border-radius: 0;
-
-     standard bootstrap btn transitions 
+    /* standard bootstrap btn transitions */ 
     transition: color .15s ease-in-out,background-color .15s ease-in-out,border-color .15s ease-in-out,box-shadow .15s ease-in-out;
 }
 
@@ -550,40 +398,3 @@ Allauth form formatting
     height: 1.5rem;
     width: 1.5rem;
 }
-
-/* pad the top a bit when navbar is collapsed on mobile */
-/* @media (max-width: 991px) {
-    .header-container {
-        padding-top: 116px;
-    }
-
-    body {
-        height: calc(100vh - 116px);
-    }
-
-    .display-4.logo-font.text-black {
-        font-size: 2rem;
-    }
-
-    .nav-link {
-        padding: 0.15rem;
-    }
-
-    .nav-link i.fa-lg {
-        font-size: 1rem;
-    }
-
-    .navbar-toggler {
-        padding: .6rem .6rem;
-        font-size: 1rem;
-    }
-
-    #delivery-banner h4 {
-        font-size: .9rem;
-    }
-
-
-    .increment-qty, .decrement-qty {
-        padding: .25rem .5rem !important;
-    }
-}  */
